fix(frontend productspage component): increased the gap between the columns and rows

--- a/client/src/page-components/ProductsPage/index.css
+++ b/client/src/page-components/ProductsPage/index.css
@@ -19,6 +19,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
+  grid-column-gap: 12px;
+  grid-row-gap: 12px;
 }
